fixed laser intro overflowing on small viewports in ie11

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -873,8 +873,6 @@ label[for="burger"] {
 }
 
 .laser__intro-btn {
-    justify-self: start;
-    align-self: center;
     margin: 0px 20px 60px 75px;
     background-color: rgba(255, 255, 255, .2);
     border: 1px solid rgba(255, 255, 255, .6);
@@ -1031,7 +1029,7 @@ label[for="burger"] {
 
     .laser__intro-title-container {
         width: 100%;
-        height: 33%;
+        height: auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -1053,7 +1051,7 @@ label[for="burger"] {
     }
 
     .laser__intro-body-container {
-        height: 67%;
+        height: auto;
         background: rgb(39, 101, 134);
         display: flex;
     }
